Media query added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <form action="">
             <div class="amount">
                 <p>Enter amount</p>
-                <input value="100" type="text">
+                <input value="1" type="text">
             </div>
             <div class="dropdown">
                 <div class="from">
-                    <p>From</p>
+                    <p style="text-align: center;">From</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/shiny/64.png" alt="">
                         <select name="from" id="from">
@@ -26,9 +26,10 @@
                         </select>
                     </div>                   
                 </div>
-                <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                <div class="i">  <i class="fa-solid fa-arrow-right-arrow-left"></i></div>
+              
                 <div class="To">
-                    <p>To</p>
+                    <p style="text-align: center;">To</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/IN/shiny/64.png" alt="">
                         <select name="to" id="to">
@@ -37,7 +38,7 @@
                     </div>                   
                 </div>
             </div>
-            <div class="final-msg">1USD = 80INR</div>
+            <div class="final-msg">1USD = 83.80314076 INR</div>
             <button class="submit">Get Exchange</button>
         </form>
     </div>
